actions: security: Fix command injection and input validation
Validate inputs to prevent command injection in make, aria2c, and git.
Add path traversal validation in getConfigPath. Validate ksu-url.

Fix release mode, opam env, BBG setup, and remove dead code.

Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Android Kernel Build Action",
   "main": "dist/index.js",
   "scripts": {
-    "build": "ncc build src/index.ts -o dist",
+    "build": "ncc build src/index.ts -o dist && ncc build src/post.ts -o dist/post",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts"
