--- a/action.yml
+++ b/action.yml
@@ -161,5 +161,6 @@ inputs:
 runs:
   using: 'node20'
   main: 'dist/index.js'
-  post: 'dist/index.js'
+  post: 'dist/post/index.js'
   post-if: 'always()'
+
