--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
   push:
     branches: main
+    paths:
+      - '.github/workflows/check.yml'
+      - '**/*.py'
+      - 'src/*.ts'
+      - 'yarn.lock'
 
 jobs:
   python-lint:
