--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Android Kernel Build Action",
   "main": "dist/index.js",
   "scripts": {
-    "build": "ncc build src/index.ts -o dist && ncc build src/post.ts -o dist/post",
+    "build": "rm -rf dist && ncc build src/index.ts -o dist && ncc build src/post.ts -o dist/post",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts"
@@ -16,16 +16,18 @@
     "@actions/exec": "^2.0.0",
     "@actions/github": "^8.0.0",
     "@actions/tool-cache": "^3.0.0",
-    "@octokit/rest": "^22.0.1",
-    "is-plain-object": "^5.0.0"
+    "@octokit/core": "^7.0.6",
+    "@octokit/graphql": "^9.0.3",
+    "@octokit/request": "^10.0.7",
+    "@octokit/rest": "^22.0.1"
   },
   "devDependencies": {
     "@types/node": "^25.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^6.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.56.0",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.3"
+    "eslint": "^9.39.2",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.4"
   }
 }
