--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -70,5 +70,35 @@ jobs:
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      - name: Build with ncc
+      - name: Run tests
+        run: yarn test
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage/
+      - name: Build with esbuild
         run: yarn build
+
+  coverage-report:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    needs: typescript-build
+    if: github.event_name == 'pull_request'
+    steps:
+      - uses: actions/checkout@v6
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '20'
+          cache: 'yarn'
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Run tests with coverage
+        run: yarn test
+      - name: Coverage Report Comment
+        uses: davelosert/vitest-coverage-report-action@v2
+        with:
+          json-summary-compare-path: ./coverage/coverage-summary.json
