--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "rm -rf dist && esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js && esbuild src/post.ts --bundle --platform=node --target=node20 --outfile=dist/post/index.js --format=cjs",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
-    "format:check": "prettier --check src/**/*.ts"
+    "format:check": "prettier --check src/**/*.ts",
+    "test": "vitest --coverage"
   },
   "dependencies": {
     "@actions/artifact": "^6.0.0",
@@ -26,9 +27,11 @@
     "@types/node": "^25.3.0",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
+    "@vitest/coverage-v8": "^2.0.0",
     "esbuild": "^0.27.3",
     "eslint": "^10.0.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.4",
+    "vitest": "^2.0.0"
   }
 }
