--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,16 +30,16 @@ jobs:
     - name: Build Kernel
       uses: ./
       with:
-          kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
-          kernel-dir: msm-4.19
-          kernel-branch: taffy
-          config: cas_defconfig
+          kernel-url: https://github.com/samsungexynos7420/android_kernel_samsung_universal7420
+          kernel-dir: noblelte
+          kernel-branch: lineage-21.0-unify
+          config: exynos7420-noblelte_defconfig
           arch: arm64
           aosp-gcc: true
           aosp-clang: true
-          ksu: true
-          ksu-version: main
-          android-version: 12
+          ksu: false
+          android-version: 14
           aosp-clang-version: r383902
           disable-lto: true
           anykernel3: true
+          kvm: true
